# algds2024

./: README.md
lab1/: CMakeLists.txt
lab1/include/: dp.h
lab1/src/: dp.c  main.c
lab1/test/: Gtest.cpp
lab2/: CMakeLists.txt
lab2/include/: treap.h
lab2/src/: main.c  treap_create.c  treap_delete.c  treap_inorder.c  treap_insert.c  treap_rotate.c  treap_search.c
lab2/test/: Gtest.cpp
